# CustomCAS

./: .gitignore  main.py  pyproject.toml  readme.md  test_cas.py  tester.py
tools/: nodes.py  parser.py  print_handler.py  simplifier.py  symbols  symbols.py  tokenizer.py
